mobile overflow image fixed

--- a/scss/2-base/_reset.scss
+++ b/scss/2-base/_reset.scss
@@ -79,7 +79,6 @@ main {
 body {
     line-height: 1;
     font-family: $font-poppins;
-    overflow-x: hidden;
 
     @include mobile {
         text-align: center;
@@ -112,4 +111,8 @@ table {
 input {
     -webkit-appearance: none;
     border-radius: 0;
+}
+
+.wrapper {
+    overflow: hidden;
 }
