--- a/scss/3-components/_image.scss
+++ b/scss/3-components/_image.scss
@@ -3,6 +3,7 @@
     float: right;
     margin-top: -50px;
     margin-right: -200px;
+    overflow-x: hidden;
 
     @include mobile {
         margin-top: -700px;
